--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>XRTwinScape Project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: 'Segoe UI', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #000;
+            color: #f0f0f0;
+        }
+        header {
+            background: #111;
+            padding: 1rem;
+            text-align: center;
+            border-bottom: 3px solid #009fe3;
+        }
+        header img {
+            max-width: 200px;
+            height: auto;
+        }
+        main {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 2rem;
+            background: #1a1a1a;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.7);
+        }
+        h1, h2 {
+            color: #00b4d8;
+        }
+        .center-message {
+            margin: 4rem 0;
+            text-align: center;
+            font-size: 1.2rem;
+            color: #ccc;
+        }
+        footer {
+            text-align: center;
+            margin-top: 4rem;
+            padding: 1rem;
+            font-size: 0.9rem;
+            background: #111;
+            color: #888;
+        }
+        a {
+            color: #90e0ef;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <img src="twinscape_logo.png" alt="Twinscape Logo">
+    </header>
+    <main>
+        <h1>XRTwinScape</h1>
+        <h2>Advancing Contextualized Learning and Training for Industry 5.0 Through Immersive Virtual Environments</h2>
+
+        <h2>Project Description</h2>
+        <p>
+            XRTwinScape tackles the challenge of preparing workers in realistic virtual training environments. These environments replicate real-world workplaces, offering familiar surroundings and hands-on experience, while overcoming security and replicability limitations. XRTwinScape uses digital twin technology, including Gaussian Splatting for rapid, high-quality digital twin creation.
+        </p>
+
+
+        <div class="center-message">
+            <p>More information will be available soon.<br>Stay tuned!</p>
+        </div>
+    </main>
+    <footer>
+        &copy; 2025 XRTwinScape Project – All rights reserved.
+    </footer>
+</body>
+</html>
