Added links to partners

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     <div class="card text-center">
                         <img src="media/formamentis_logo.jpg" alt="FMTS Logo"
                             class="mx-auto mb-4 rounded-full">
-                        <h3 class="text-xl font-semibold mb-1 text-blue-700">Formamentis SPA (FMTS)</h3>
+                        <h3 class="text-xl font-semibold mb-1 text-blue-700"><a href="https://www.fmtsgroup.it/">Formamentis SPA (FMTS)</a></h3>
                         <p class="text-sm font-medium text-gray-500 mb-2">Coordinator</p>
                         <p class="text-gray-600 text-sm">Expertise in education, employment services, industrial
                             training (Eduwork complex).</p>
@@ -293,7 +293,7 @@
                     <div class="card text-center">
                         <img src="media/cerict_logo.jpg" alt="CeRICT Logo"
                             class="mx-auto mb-10 rounded-full">
-                        <h3 class="text-xl font-semibold mb-1 text-red-700">CeRICT scrl</h3>
+                        <h3 class="text-xl font-semibold mb-1 text-red-700"><a href="https://www.cerict.it/it/">CeRICT scrl</a></h3>
                         <p class="text-sm font-medium text-gray-500 mb-2">Research & Development</p>
                         <p class="text-gray-600 text-sm">Expertise in XR, digital reconstruction, AI, cybersecurity
                             (Univ. of Salerno - ISISLab).</p>
@@ -301,7 +301,7 @@
                     <div class="card text-center">
                         <img src="media/picaresque-logo.png" alt="Picaresque Logo"
                             class="mx-auto mb-4 rounded-full" style="width: 230px; height: 200px;">
-                        <h3 class="text-xl font-semibold mb-1 text-green-700">Picaresque SRL (PICA)</h3>
+                        <h3 class="text-xl font-semibold mb-1 text-green-700"><a href="https://tech.picaresquestudio.com/">Picaresque SRL (PICA)</a></h3>
                         <p class="text-sm font-medium text-gray-500 mb-2">Software & XR Development</p>
                         <p class="text-gray-600 text-sm">Specializes in immersive video games, XR applications,
                             gamification.</p>
